--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -16,6 +16,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <ListView
+        android:id="@+id/notesListView"
         android:layout_width="337dp"
         android:layout_height="558dp"
         android:layout_alignParentStart="true"
